@@ -1,5 +1,10 @@
+2012-01-11  Tobias Burnus  <burnus@net-b.de>
+
+	* runtime/main.c (store_exe_path): Fix absolute path
+	detection for Windows.
+
 2012-01-11  Janne Blomqvist  <jb@gcc.gnu.org>
-            Mike Stump  <mikestump@comcast.net>
+	    Mike Stump  <mikestump@comcast.net>
 	PR libfortran/51803
 	* runtime/main.c (store_exe_path): Handle getcwd failure and lack
 	of the function better.
